<resources>
    <string name="app_name">Sound and Wave</string>
    <string name="b1">Simple Calculator</string>
    <string name="b2">Graphing Calculator</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="Add">+</string>
    <string name="Subtract">-</string>
    <string name="Multiply">x</string>
    <string name="Divide">/</string>
    <string name="Equal">=</string>
    <string name="allClear">AC</string>
    <string name="Clear">C</string>
    <string name="ReturnHome">Back to Main</string>

    <string name="sine">Sine</string>
    <string name="cosine">Cosine</string>
    <string name="back_to_main">Back To Main</string>
    <string name="Aplus">A+</string>
    <string name="Aminus">A-</string>
    <string name="Pplus">P+</string>
    <string name="Pminus">P-</string>
    <string name="Fplus">F+</string>
    <string name="Fminus">F-</string>
    <string name="compositeFunction">Composite Function</string>
    <string name="goToMainActivity">Back to Main</string>
    <string name="capture_sound">Capture Sound</string>

    <string name="b3">Sound</string>
</resources>
