<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sg.edu.nus.tutorials.MainActivity">

    <Button
        android:text="@string/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="onClick_simple"/>

    <Button
        android:text="@string/b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:id="@+id/button2"
        android:onClick="onClick_graphing"/>

    <Button
        android:text="@string/b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button11"
        android:onClick="onClick_sound"/>

</LinearLayout>
